fixed the bug on js when the user clicks on the input filed it was adding a empthy value and made some HTML

--- a/Index.html
+++ b/Index.html
@@ -19,8 +19,12 @@
           <h1 class="title">MOVIE TITLE</h1>
           <p>Movies i have seen and movies i want to see</p>
           <form id="add-movies">
-            <input type="text" placeholder="Add a Movies" />
-            <button id="btns">Add</button>
+            <input
+              type="text"
+              id="fevoriteMovieNameInput"
+              placeholder="Enter movie name"
+            />
+            <button id="btns">Add Movie</button>
           </form>
         </div>
       </header>
