when the user click on the viewed and delet button on the new added element it makes the change

--- a/Index.html
+++ b/Index.html
@@ -33,22 +33,22 @@
         <h2 class="title">Movies to watch</h2>
         <ul>
           <li>
-            <span class="name">Back to futher</span>
+            <span class="name">The Godfather</span>
             <span class="viewed">Viewed</span>
             <span class="delete">Deleted</span>
           </li>
           <li>
-            <span class="name">Back to futher</span>
+            <span class="name">The Shawshank Redemption</span>
             <span class="viewed">Viewed</span>
             <span class="delete">Deleted</span>
           </li>
           <li>
-            <span class="name">Back to futher</span>
+            <span class="name">Pulp Fiction</span>
             <span class="viewed">Viewed</span>
             <span class="delete">Deleted</span>
           </li>
           <li>
-            <span class="name">Back to futher</span>
+            <span class="name">The Dark Knight</span>
             <span class="viewed">Viewed</span>
             <span class="delete">Deleted</span>
           </li>
