added some html validation

--- a/Index.html
+++ b/Index.html
@@ -23,6 +23,7 @@
               type="text"
               id="fevoriteMovieNameInput"
               placeholder="Enter movie name"
+              required
             />
             <button id="btns">Add Movie</button>
           </form>
