added some validation to the html and js do not submit an empty form.

--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,7 @@
               required
             />
             <button id="btns">Add Movie</button>
+            <div id="errorMessage"></div>
           </form>
         </div>
       </header>
